# samples

./: .gitignore
clang/01.cmake/: CMakeLists.txt
cmake/c/01.helloworld/: helloworld.c
cmake/cpp/01.helloworld/: CMakeLists.txt
cmake/cpp/02.icon/: CMakeLists.txt
cmake/cpp/03.csv/: CMakeLists.txt  re2c.re
cmake/cpp/04.wxWidgets/: CMakeLists.txt  CMakeSettings.json
cpp/codes/02.wxWidgets/: CMakeSettings.json
cpp/other/01.icon/: icon.cpp
cpp/visualstudio/: helloworld.vcxproj.filters
cs/codes/01.textFieldParser/: Program.cs  textFieldParser.csproj
cs/codes/01.textFieldParser/Properties/: AssemblyInfo.cs
cs/codes/02.thrift/: thrift.sln
cs/codes/02.thrift/thrift_common/: helloWorld.thrift  thrift_common.csproj
cs/codes/02.thrift/thrift_common/Properties/: AssemblyInfo.cs
cs/codes/02.thrift/thrift_server/: Program.cs  thrift_server.csproj
cs/codes/02.thrift/thrift_server/Properties/: AssemblyInfo.cs
cs/codes/03.json/: Program.cs  json.csproj
cs/codes/03.json/Properties/: AssemblyInfo.cs
cs/codes/04.zip/: Program.cs
cs/codes/05.git/: Program.cs  git.csproj  git.sln
cs/codes/06.Linq/Linq/: Linq.csproj
cs/codes/06.Linq/Linq/Properties/: AssemblyInfo.cs
cs/codes/07.Roslyn/: 07.codeDom.sln
cs/codes/07.Roslyn/codeCom/: CodeDom.csproj  Program.cs  packages.config
cs/codes/07.Roslyn/codeCom/Properties/: AssemblyInfo.cs
cs/codes/08.ServiceUtil/: Form1.Designer.cs  Form1.cs  Form1.resx  Program.cs  ServiceUtil.csproj  ServiceUtil.sln  app.manifest
cs/codes/08.ServiceUtil/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
cs/codes/09.CheckZip/: CheckZip.csproj  CheckZip.sln  Program.cs
cs/codes/09.CheckZip/Properties/: AssemblyInfo.cs
cs/gradle/: build.gradle  gradle.sln
cs/gradle/src/main/cs/: Program.cs  gradle.csproj
cs/gradle/src/main/cs/Properties/: AssemblyInfo.cs
cs/visualstudio/: helloworld.sln
golang/03.sendMail/: main.go
golang/04.webdev/: main.go
golang/05.wxwidgets/: .gitignore  readme.md
java/codes/01.csv/: build.cmd  build.gradle
java/codes/01.csv/src/main/java/org/example/helloWorld/: Program.java
java/codes/02.gson/: build.gradle
java/codes/02.gson/src/main/java/org/example/helloWorld/: Model.java  Program.java
java/codes/03.jackson/: build.gradle
java/codes/03.jackson/src/main/java/org/example/helloWorld/: Model.java  Program.java
java/codes/04.EvoSuite/: pom.xml
java/codes/04.EvoSuite/src/main/java/org/example/helloWorld/: Program.java
java/codes/04.EvoSuite/src/test/java/org/example/helloWorld/: Program_ESTest.java  Program_ESTest_scaffolding.java
java/codes/05.EvoSuite/: build.cmd  build.gradle
java/codes/05.EvoSuite/src/main/java/org/example/helloWorld/: Program.java
java/codes/05.EvoSuite/src/test/java/org/example/helloWorld/: Program_ESTest.java  Program_ESTest_scaffolding.java
java/codes/06.swing/: .gitignore  pom.xml
java/codes/06.swing/src/main/java/pkg/: ActionMenu.java  HelloWorld.java  MainFrame.java
java/codes/07.yaml/: build.gradle
java/codes/08.RestartPlugin/src/restartPlugin/: RestartAction.java
java/codes/09.jediterm/: build.gradle  settings.gradle
java/codes/10_velocity/: pom.xml
java/codes/10_velocity/src/main/java/: HelloWorld.java
java/dropwizard/: .gitignore  build.gradle
java/dropwizard/src/main/java/org/example/helloWorld/: MyConfiguration.java  Program.java
java/gradle/: .gitignore  build.gradle  eclipse.cmd  killJava.cmd  readme.md
java/gradle/src/main/cs/org/example/helloWorld/: Program.cs
java/gradle/src/main/java/org/example/helloWorld/: Program.java
java/gradle/src/test/java/example/: TestProgram.java
java/playframework/: build.sbt
java/springBoot/: .gitignore  build.cmd  build.gradle  idea.cmd  run.cmd  settings.gradle
java/springBoot/src/main/java/org/example/helloWorld/: Program.java
pycharm/django_sample/: freeze.bat  readme.md  update.bat
pycharm/django_sample/django_sample/: settings.py
pycharm/django_sample/test01/: urls.py  views.py
pycharm/django_sample/test01/migrations/: 0001_initial.py
pycharm/django_sample/test01/templates/test01/: detail.html  index.html  results.html
visualstudio/cpp/01.helloworld/: helloworld.cpp  helloworld.sln  helloworld.vcxproj
visualstudio/cs/01.helloworld/: Program.cs  helloworld.csproj
visualstudio/cs/01.helloworld/Properties/: AssemblyInfo.cs
visualstudio/cs/02.textFieldParser/: textFieldParser.sln
visualstudio/cs/03.thrift/thrift_client/: Program.cs  packages.config  thrift_client.csproj
visualstudio/cs/03.thrift/thrift_client/Properties/: AssemblyInfo.cs
visualstudio/cs/03.thrift/thrift_common/: thrift.targets
visualstudio/cs/04.json/: Hoge.cs  json.sln
visualstudio/cs/05.zip/: zip.csproj  zip.sln
visualstudio/cs/05.zip/Properties/: AssemblyInfo.cs
visualstudio/cs/06.git/Properties/: AssemblyInfo.cs
visualstudio/cs/07.Linq/: Linq.sln
visualstudio/cs/07.Linq/Linq/: Program.cs
(+5 files in other folders)
